--- a/src/main/resources/templates/new-product.html
+++ b/src/main/resources/templates/new-product.html
@@ -7,7 +7,6 @@
 <head>
   <meta charset="UTF-8">
   <title>New Product</title>
-  <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
 <body>
 <div class="p-3" layout:fragment="content">
@@ -26,14 +25,14 @@
 
     <div class="mb-3">
       <label class="form-label">Price</label>
-      <input class="form-control" type="text" name="price" th:value="${product.price}"/>
+      <input class="form-control" type="number" name="price" th:value="${product.price}"/>
       <span class="text-danger" th:errors="${product.price}"></span>
 
     </div>
 
     <div class="mb-3">
       <label class="form-label">Quantity</label>
-      <input class="form-control" type="text" name="quantity" th:value="${product.quantity}"/>
+      <input class="form-control" type="number" name="quantity" th:value="${product.quantity}"/>
       <span class="text-danger" th:errors="${product.quantity}"></span>
     </div>
 
