--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout1"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
     <meta charset="UTF-8">
@@ -11,7 +12,7 @@
 </head>
 <body>
 <div class="p-3" layout:fragment="content" >
-    <div class="p-3">
+    <div class="p-3" sec:authorize="hasRole('ADMIN')">
         <a class="btn btn-primary" th:href="@{/admin/newProduct}">New Product</a>
 
     </div>
@@ -32,8 +33,13 @@
             <td th:text="${p.description}"></td>
             <td th:text="${p.price}"></td>
             <td th:text="${p.quantity}"></td>
-            <td>
-                <a class="btn btn-danger" th:href="@{/admin/delete(id=${p.id})}" onclick="return confirm('Etes vous sure ?')">Delete</a>
+            <td sec:authorize="hasRole('ADMIN')">
+                <!--<a class="btn btn-danger" th:href="@{/admin/delete(id=${p.id})}" onclick="return confirm('Etes vous sure ?')">Delete</a>-->
+                <form method="post" th:action="@{/admin/delete(id=${p.id})}">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+
+
+                </form>
             </td>
         </tr>
         </tbody>
