--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,31 +10,47 @@
     <script src="/webjars/bootstrap/5.3.0/js/bootstrap.bundle.js"></script>
 </head>
 <body>
-<section class="vh-100" style="background-color: #0d6efd;">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                <div class="card shadow-2-strong" style="border-radius: 1rem;">
-                    <div class="card-body p-5 text-center">
-                        <h3 class="mb-5">Sign in</h3>
-                        <form method="post" th:action="@{/login}">
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="username">Username:</label>
-                                <input type="text" id="username" name="username" class="form-control form-control-lg" />
+<section class="vh-100">
+    <div class="container-fluid">
 
-                            </div>
+        <div class="row">
+            <div class="col-sm-6 text-black">
 
-                            <div class="form-outline mb-4">
-                                <label class="form-label" for="password">Password:</label>
-                                <input type="password" id="password" name="password" class="form-control form-control-lg" />
-                            </div>
-
-                            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-                        </form>
-
-
-                    </div>
+                <div class="px-5 ms-xl-4">
+                    <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+                   <!-- <span class="h1 fw-bold mb-0">Logo</span>-->
                 </div>
+
+                <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+
+                    <form style="width: 23rem;" method="post" th:action="@{/login}">
+
+                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign in</h3>
+
+                        <div class="form-outline mb-4">
+                            <label class="form-label" for="username">Username:</label>
+                            <input type="text" id="username" name="username" class="form-control form-control-lg" />
+
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <label class="form-label" for="password">Password:</label>
+                            <input type="password" id="password" name="password" class="form-control form-control-lg" />
+                        </div>
+
+                        <div class="pt-1 mb-4">
+                            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                        </div>
+
+
+                    </form>
+
+                </div>
+
+            </div>
+            <div class="col-sm-6 px-0 d-none d-sm-block vh-100" style="background-color: #0d6efd;">
+              <!--  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp"
+                     alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">-->
             </div>
         </div>
     </div>
